Closed Bug 410659 Opened 18 years ago Closed 18 years ago

Plug feImage leaks

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tor, Assigned: tor)

References

Details

(Keywords: memory-leak, testcase)

Attachments

(2 files)

No description provided.
Attachment #295244 - Flags: superreview?(roc)
Attachment #295244 - Flags: review?(longsonr)
Attachment #295244 - Flags: review?(longsonr) → review+
Blocks: 390379
Keywords: mlk, testcase
Attached image Jesse's testcase
Refers to a local file because it wants to be a crashtest. (It would be great if we had reftests for feImage, too!)
Assignee: nobody → tor
Version: unspecified → Trunk
Attachment #295244 - Flags: superreview?(roc) → superreview+
Attachment #295244 - Flags: approval1.9?
Flags: blocking1.9?
Attachment #295244 - Flags: approval1.9? → approval1.9+
Checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Crashtests checked in.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: