Bug 410659 - plug feImage leaks.  r=longsonr, sr=roc, a=mtschrep